Enable recipe-roller autosubmit
Bug: 773529
Change-Id: If00fae56890e7826f9a08ccafe7d45fff2d31ed0

--- a/infra/config/recipes.cfg
+++ b/infra/config/recipes.cfg
@@ -3,6 +3,7 @@
   "autoroll_recipe_options": {
     "nontrivial": {
       "automatic_commit_dry_run": true
+      "set_autosubmit": true
     },
     "trivial": {
       "automatic_commit": true,
